restructured and added README